Finished with version 1.0. All the information text has been added. It is now ready for playtesting.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/textstyle.css">
     <link rel="stylesheet" type="text/css" href="css/webstyle.css">
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
 
   </head>
-
 
   <body>
 
@@ -28,7 +28,6 @@
 
       <hr>
 
-      <!-- -->
       <!-- Wrapper for the screen space for the game -->
       <div id="wrapper" class="container-narrow">
 
@@ -36,44 +35,25 @@
         <h1 class="text_h1_center grey_text title_font">Welcome</h1>
         <hr>
         <p class="text_info info_text">
-          Placeholder text about dyslexia here.Placeholder text about dyslexia here.
-          Placeholder text about dyslexia here.Placeholder text about dyslexia here.
-          Placeholder text about dyslexia here.Placeholder text about dyslexia here.
-          Placeholder text about dyslexia here.Placeholder text about dyslexia here.
-          Placeholder text about dyslexia here.Placeholder text about dyslexia here.
-          Placeholder text about dyslexia here.Placeholder text about dyslexia here.
-          Placeholder text about dyslexia here.Placeholder text about dyslexia here.
-          Placeholder text about dyslexia here.Placeholder text about dyslexia here.
-          Placeholder text about dyslexia here.Placeholder text about dyslexia here.
-          You are encouraged to read the text in the visualisations aloud. There will be 8 visualisations.
+          The focus here is to visualise <em>Visual Dyslexia</em>, not Phonological/Auditory Dyslexia. 
+          Most of the visualisations are based from information provided by Abigail Marshall (2018) on dyslexia.com, which is the website for Davis Dyslexia Association International. 
+        </p>
+
+        <p class="text_info info_text">
+          A dyslexic person can have several of these symptoms listed there. You will be presented with only one visualisation of a symptom at the time. It is important to have in mind that these visualisations are just that, visualisations, <b>they do not accurately simulate</b> how it is to have a reading disability. <b>The purpose is to raise awareness</b> and to provide people without a reading disability an <b>understanding</b> of how frustrating it can be. These visualisations hope to serve as a way for people to understand how it feels, not to show exactly how it is. 
+        </p>
+
+        <p class="text_info info_text">
+          You will be presented with a sentence that you are going to read. It is optional to submit an answer of what you think the text says. You can continue without submitting an answer. <b>You are encouraged to read the text in the visualisations aloud as you try to read</b>. There will be 10 visualisations.
+        </p>
+
+        <p class="text_info info_text">
+          <b>Source:</b> <a target="_blank" href="https://www.dyslexia.com/question/what-dyslexics-see"><i>https://www.dyslexia.com/question/what-dyslexics-see (Retrieved 2018-05-11)</i></a>
         </p>
 
         <div class="div_button_continue">
           <button id="start_button" class="btn btn-info">Continue</button>
         </div>  
-
-        <!--
-        <p>
-          There once was a lady with pride,<br>
-          <backward>who ate fourteen green apples and died.</backward><br>
-          Within the lamented,<br>
-          <backward>the apple fermented</backward><br>
-          and made cider inside her insides.
-        </p>
-
-        <h2>This is a heading</h2>
-
-        <p>This is a paragraph.</p>
-        <p id="testText">This text will be scrambled.</p>
-
-        <button>Click me</button>
-
-        <canvas id='canvas'></canvas>
-
-        <span style="text-gravity: inverse">
-          write upside down text
-        </span>
-        -->
 
       </div>
 
