Minor frontend tweaks so that the button won't cover text when on mobile.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <b>Source:</b> <a target="_blank" href="https://www.dyslexia.com/question/what-dyslexics-see"><i>https://www.dyslexia.com/question/what-dyslexics-see (Retrieved 2018-05-11)</i></a>
         </p>
 
-        <div class="div_button_continue">
+        <div style="text-align: center; font-family: 'Noto Sans', sans-serif; ">
           <button id="start_button" class="btn btn-info">Continue</button>
         </div>  
 
